# Baguette-In-The-Sky

./: README.md  generate_doc.py  main.py  pyproject.toml
bits/: __init__.py
bits/src/: __init__.py  const.py  corrections.py  naming.py  plotter.py  reference_frame_object.py  spp.py  sv_model.py  time_frame_object.py  utils.py
bits/src/convert/: other.py  space_conversion.py  time_conversion.py
bits/src/parsers/: ephemeris.py  gnss_raw.py
bits/test/: __init__.py  test_GnssTimestamp.py  test_corrections.py  test_parser.py  test_spp.py  test_sv_model.py  test_time_frame_object.py
bits/test/test_data/: SkydelRINEX_S_2023257120_600S_EN.rnx  XXXX00FRA_R_20261271839_00U_01S_MO.rnx  rinex_nav.rnx
bits/test/test_data/gnss_raw/: rinex_v2.rnx  rx1_1
bits/test/test_data/skydel_raw/: E1 02.csv  E1 04.csv  E1 05.csv  E1 09.csv  E1 11.csv  E1 30.csv  E1 34.csv  E1 36.csv  L1CA 04.csv  L1CA 05.csv  L1CA 06.csv  L1CA 09.csv  L1CA 11.csv  L1CA 12.csv  L1CA 19.csv  L1CA 20.csv  L1CA 25.csv  L1CA 29.csv
