[project]
name = "baguette_in_the_sky"
authors = [
  {name = "Enki Saura", email = "esaura@ikosconsulting.com"},
  {name = "Timothée Guillemaille"},
  {name = "Corentin Menier"},
]
maintainers = [
  {name = "Enki Saura", email = "esaura@ikosconsulting.com"}
]
description = "This is an awesome script !"
dynamic = ["version"]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "georinex",
    "pyproj",
    "folium",
]
requires-python = ">= 3.12"


[tool.pytest.ini_options]
testpaths = ["bits/test"] # Test directory
python_files = ["test_*.py"] # Test files
python_classes = ["Test*"] # Test class
python_functions = ["test_*"] # Test functions
norecursedirs = [".*", "build", "dist", "venv", "env", "__pycache__", "test_data"] # Not included directories
